# Organisateur-de-Fichiers-Multiplatforme

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
include/: organizer.h
src/: main.c  organizer.c
